feat: se agrega configuracion maven para ejecucion de tests